# storm-events-rag

./: .gitignore  README.md  pyproject.toml
docs/: chunking-notes.md
notebooks/: w1d2_eda.ipynb  w1d3_choropleth.ipynb  w1d4_raster.ipynb  w2d1.ipynb  w2d2.ipynb
src/storm_events_rag/: __init__.py
src/storm_rag/: api.py  clean.py  geo.py  ingest.py
tests/: test_api.py  test_clean.py
