[project]
name = "storm-events-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tranjackson", email = "jacksontran306@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "shapely>=2.1.2",
]

[project.scripts]
storm-events-rag = "storm_events_rag:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
