[project]
name = "storm-events-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tranjackson", email = "jacksontran306@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "folium>=0.20.0",
    "geopandas>=1.1.4",
    "mapclassify>=2.10.0",
    "matplotlib>=3.11.0",
    "netcdf4>=1.7.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "rioxarray>=0.22.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "shapely>=2.1.2",
    "uvicorn>=0.50.0",
    "xarray>=2026.4.0",
]

[project.scripts]
storm-events-rag = "storm_events_rag:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "jupyter>=1.1.1",
    "nbstripout>=0.9.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
